# TSDataStructure

./: ..gitignore.un~  .gitignore  .gitignore~  CMakeLists.txt
CourseBook/: CMakeLists.txt
PAT/: CMakeLists.txt
PAT/1001_APlusBFormat/: 1001_APlusBFormat_Main.c  CMakeLists.txt
PAT/1002A+BforPolynomimals/: 1002A+BforPolynomimals_Main.c  CMakeLists.txt
PAT/1002_A+BforPolynomimals/: 1002_A+BforPolynomimalsFinalVersion.c  1002_A+BforPolynomimals_Main.c  1002_A+BforPolynomimals_Main.h  1002_A+BforPolynomimals_Main_ErrorCode.c  APulsBforpolynomimalsVersion1.c  CMakeLists.txt
PAT/1003_Emergency/: 1003_Emergency.c  1003_Emergency.h  1003_Emergency_Main.c  CMakeLists.txt
PAT/1004_CountingLeaves/: 1004_CountingLeaves_Main.c  CMakeLists.txt
PAT/1005_SpellItRight/: 1005_SpellItRight_Main.c  CMakeLists.txt  main.cpp
PAT/1006_SignInAndSignOut/: 1006_SignInAndSignOut_Main.c  CMakeLists.txt  main.cpp
PAT/1007_MaxSubseqSum/: 1007_MaxSubseqSum_Main.c  CMakeLists.txt
PAT/1008_Elevator/: CMakeLists.txt  main.c
PAT/1009_ProductOfPolynomials/: CMakeLists.txt  main.c
PAT/1010_Radix/: 1010_Radix_Main.c  CMakeLists.txt
PAT/1011_World_Cup_Betting/: 1011_World_Cup_Betting_Main.c  CMakeLists.txt
PAT/1012_TheBestRank/: 1012_TheBestRank_Main.c  CMakeLists.txt
PAT/1013_BattleOverCities/: 1013_BattleOverCities_Main.c  CMakeLists.txt
PAT/1014_WaitinginLine/: 1014_WaitinginLine_Main.c  CMakeLists.txt
PAT/1015_ReversiblePrimes/: 1015_ReversiblePrimes_Main.c  CMakeLists.txt
PAT/1016_PhoneBills/: 1016_PhoneBills_Main.c  CMakeLists.txt
PAT/PAT/: main.cpp
(+48 files in other folders)
