add_subdirectory(1001_APlusBFormat)
add_subdirectory(1002A+BforPolynomimals)
add_subdirectory(1003_Emergency)
add_subdirectory(1005_SpellItRight)
add_subdirectory(1006_SignInAndSignOut)
add_subdirectory(1007_MaxSubseqSum)
add_subdirectory(1008_Elevator)
add_subdirectory(1009_ProductOfPolynomials)
add_subdirectory(1010_Radix)
add_subdirectory(1011_World_Cup_Betting)
add_subdirectory(1012_TheBestRank)
add_subdirectory(1013_BattleOverCities)
add_subdirectory(1014_WaitinginLine)
add_subdirectory(1015_ReversiblePrimes)
add_subdirectory(1016_PhoneBills)